Fix exception when event is fired during completion phase